Updated to add readme file

--- a/Node/angular-karma/src/app/product-details/product-details.component.html
+++ b/Node/angular-karma/src/app/product-details/product-details.component.html
@@ -1,11 +1,11 @@
-<!--<h1>{{title}}</h1>
+<h1>{{title}}</h1>
 <button (click) =  "enableBuying()">Enable/Disable</button>
 <div *ngFor = "let product of products">
 <h2>{{product.name}}</h2>
 <h2>{{product.price}}</h2>
 <h2>{{product.description}}</h2>
 <app-alert-details [product] = "product"  [isUnchanged] = isUnchanged (notify) = "clickMe(product)"></app-alert-details>
-</div>-->
+</div>
 
 
 <div class="container py-5">
