--- a/Node/angular-karma/src/app/app.component.html
+++ b/Node/angular-karma/src/app/app.component.html
@@ -1,2 +1,3 @@
-<router-outlet></router-outlet>
-<p>This is Ankit's first component</p>
+<!-- <router-outlet></router-outlet> -->
+<app-product-details></app-product-details>
+<p>This is deque test component</p>
